--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "scripts": {
         "start": "node bin/www",
         "dev": "cross-env PORT=8000 NODE_ENV=dev nodemon bin/www",
-        "prd": "cross-env PORT=8000 NODE_ENV=prd pm2 start bin/www",
+        "prd-dev": "cross-env NODE_ENV=prd_dev pm2 start bin/pm2-prd-dev.config.js",
+        "prd": "cross-env NODE_ENV=production NODE_LOG_DIR=/tmp/admin-server ENABLE_NODE_LOG=YES  pm2 start bin/pm2-prd.config.js",
         "test": "cross-env NODE_ENV=test jest --runInBand --forceExit --colors",
         "lint": "eslint \"src/**/*.{js,ts}\"",
         "lint-fix": "eslint --fix \"src/**/*.{js,ts}\""
