--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "koa-static": "^5.0.0",
         "koa-views": "^6.2.0",
         "koa2-cors": "^2.0.6",
+        "lodash": "^4.17.21",
         "mysql2": "^2.2.5",
         "pm2": "^5.1.0",
         "pug": "^2.0.3",
